Closed
Bug 173035
Opened 23 years ago
Closed 23 years ago
Some very small images missing in printout
Categories
(Core Graveyard :: Printing: Xprint, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.2beta
People
(Reporter: roland.mainz, Assigned: roland.mainz)
References
()
Details
Attachments
(2 files, 1 obsolete file)
|
31.18 KB,
image/gif
|
Details | |
|
1.62 KB,
patch
|
roland.mainz
:
review+
roland.mainz
:
superreview+
|
Details | Diff | Splinter Review |
2002-09-29-08-trunk on Solaris/SPARC and Linux/x86:
Some images are missing in the printout of
http://www.ipstat.com/cgi-bin/stats?name=fdg - regardless of the detail if I
turn backgrouns images "ON" or "OFF".
Steps to reproduce:
1. Go to http://www.ipstat.com/cgi-bin/stats?name=fdg
2. Print
3. Check the output, the vertical bars (which are made of scaled images
(http://www.ipstat.com/b1.gif and http://www.ipstat.com/b2.gif) do not show-up
in the printout.
| Assignee | ||
Comment 1•23 years ago
|
||
| Assignee | ||
Comment 2•23 years ago
|
||
Looks that this problem is Xprint-module only...
Assignee: rods → katakai
Component: Printing → Printing: Xprint
QA Contact: sujay → Roland.Mainz
Summary: Some images missing in printout → Some very small images missing in printout
| Assignee | ||
Comment 3•23 years ago
|
||
Swapping Owner<--->QA ...
Assignee: katakai → Roland.Mainz
QA Contact: Roland.Mainz
| Assignee | ||
Updated•23 years ago
|
Severity: normal → critical
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.2beta
| Assignee | ||
Comment 4•23 years ago
|
||
Attachment #101989 -
Flags: review+
> scalingFactor *= (scale_x > scale_y)?(scale_x):(scale_y);
Use PR_MAX. Also, if you don't mind, use PR_MIN for the analogous code a bit
earlier.
With that, sr=roc+moz
| Assignee | ||
Comment 7•23 years ago
|
||
Attachment #101989 -
Attachment is obsolete: true
| Assignee | ||
Comment 8•23 years ago
|
||
Comment on attachment 102007 [details] [diff] [review]
New patch for 2002-09-29-08-trunk per roc+moz's sr= comments
Marking sr=roc+moz per roc+moz's permission on IRC...
Attachment #102007 -
Flags: superreview+
Attachment #102007 -
Flags: review+
Comment 9•23 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•