Some very small images missing in printout. Bug 173035, Author=Roland.Mainz@informatik.med.uni-giessen.de, r=timeless, sr=roc+moz.